--- a/Runtime/Stats 2/Kryz.RPG.Stats2.asmdef
+++ b/Runtime/Stats 2/Kryz.RPG.Stats2.asmdef
@@ -1,10 +1,7 @@
 {
-    "name": "Kryz.RPG.Stats",
-    "rootNamespace": "Kryz.RPG.Stats",
-    "references": [
-        "Unity.Burst",
-        "Unity.Collections"
-    ],
+    "name": "Kryz.RPG.Stats2",
+    "rootNamespace": "Kryz.RPG.Stats2",
+    "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
@@ -13,5 +10,5 @@
     "autoReferenced": true,
     "defineConstraints": [],
     "versionDefines": [],
-    "noEngineReferences": false
+    "noEngineReferences": true
 }
