Implemented Stats3 experiment. Needs optimizations.

--- a/Runtime/Performance Tests/Kryz.RPG.Stats.PerfTests.asmdef
+++ b/Runtime/Performance Tests/Kryz.RPG.Stats.PerfTests.asmdef
@@ -3,7 +3,8 @@
     "rootNamespace": "Kryz.RPG.Stats.PerfTests",
     "references": [
         "Kryz.RPG.Stats",
-        "Kryz.RPG.Stats2"
+        "Kryz.RPG.Stats2",
+        "Kryz.RPG.Stats3"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
