Added yet another implementation of stats. It's pretty good, just need to figure out how to remove the allocations from RemoveWhere().

--- a/Runtime/Performance Tests/Kryz.RPG.Stats.PerfTests.asmdef
+++ b/Runtime/Performance Tests/Kryz.RPG.Stats.PerfTests.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "Kryz.RPG.Stats",
         "Kryz.RPG.Stats2",
-        "Kryz.RPG.Stats3"
+        "Kryz.RPG.Stats3",
+        "Kryz.RPG.Stats4"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
