Replaced list in SimpleStat with pooled array, this reduces allocations and improves performance at the cost of having to implement insertion and removal manually.

--- a/Runtime/Kryz.RPG.Stats.asmdef
+++ b/Runtime/Kryz.RPG.Stats.asmdef
@@ -1,7 +1,9 @@
 {
     "name": "Kryz.RPG.Stats",
     "rootNamespace": "Kryz.RPG.Stats",
-    "references": [],
+    "references": [
+        "Kryz.Utils"
+    ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
