--- a/package.json
+++ b/package.json
@@ -6,5 +6,8 @@
   "license": "MIT",
   "author": {
     "name": "Kryzarel"
+  },
+  "dependencies": {
+    "com.kryzarel.c-sharp-utilities": "0.3.0"
   }
 }
