Updates due to reorganization of C# Utilities package

--- a/Performance Tests/Kryz.RPG.StatsPerfTests.asmdef
+++ b/Performance Tests/Kryz.RPG.StatsPerfTests.asmdef
@@ -3,8 +3,7 @@
     "rootNamespace": "Kryz.RPG.StatsPerfTests",
     "references": [
         "Kryz.RPG.StatsLegacy",
-        "Kryz.RPG.Stats",
-        "Kryz.RPG.Stats2"
+        "Kryz.RPG.Stats"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
