Removed old "Legacy" stuff and added the actual legacy CharacterStats package. Changed StatsPerfTests to use CharacterStats.

--- a/Legacy/Kryz.CharacterStats.asmdef
+++ b/Legacy/Kryz.CharacterStats.asmdef
@@ -1,6 +1,6 @@
 {
-    "name": "Kryz.RPG.StatsLegacy",
-    "rootNamespace": "Kryz.RPG.StatsLegacy",
+    "name": "Kryz.CharacterStats",
+    "rootNamespace": "Kryz.CharacterStats",
     "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
