Removed unecessary C# Utilities dependency

--- a/Runtime/Kryz.RPG.Stats.asmdef
+++ b/Runtime/Kryz.RPG.Stats.asmdef
@@ -1,9 +1,7 @@
 {
     "name": "Kryz.RPG.Stats",
     "rootNamespace": "Kryz.RPG.Stats",
-    "references": [
-        "Kryz.Utils"
-    ],
+    "references": [],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
